test/negative/feature_multipletypesperfile.java
public class feature_multipletypesperfile {
  public feature_multipletypesperfile() {}
  protected int x;
}

public class B {
  public B() {}
  protected int y;
}
